# tymt-launcher-client-tauri

./: .gitignore  .yarnrc  SECURITY-DEBT.md  index.html  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml  release.yml
patches/: @solar-network+crypto+4.0.2.patch
src/: index.css  main.tsx  store.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  file.rs  lib.rs  main.rs  minecraft.rs  window.rs
src/config/: MainConfig.ts
src/const/: ChainConsts.ts  CurrencyConsts.ts  EventConsts.ts  FilterOptionConsts.ts  FilterOptionNames.ts  NotificationConsts.ts  PrivateStoreIds.tsx  SysInfoConsts.ts  WalletConsts.ts  tymtConsts.ts
src/layouts/: HomeLayout.tsx
src/lib/: helper.tsx
src/locale/: en.json  jp.json
src/providers/: AlertProvider.tsx  AuthProvider.tsx  ConstVarProvider.tsx  EventListenerProvider.tsx  FullscreenProvider.tsx  MetamaskCustomProvider.tsx  NotificationProvider.tsx  SocketProvider.tsx  TransactionProvider.tsx  TrayProvider.tsx  UpdateProvider.tsx  WalletProvider.tsx
src/store/: AccountListSlice.tsx  AccountSlice.tsx  AddressSlice.tsx  AuthSlice.tsx  BalanceListSlice.ts  BetaModalSlice.tsx  CurrentChainSlice.ts  CurrentCurrencySlice.ts  CurrentTokenSlice.ts  DeveloperGameListSlice.ts  DownloadStatusSlice.ts  GameListSlice.ts  LanguageSettingSlice.tsx  LibraryListSlice.tsx  LoginAttemptsSlice.tsx  MnemonicSlice.tsx  NotificationSettingSlice.tsx  PriceListSlice.ts  RenderTimeSlice.tsx  ReserveListSlice.ts  WalletSettingSlice.ts  WalletSlice.ts  tymtLogoSlice.tsx
src/styles/: SettingStyle.ts  StoreStyles.ts  accounts.scss  (+4 more)
tests/: setup.ts
(+301 files in other folders)
