[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package]
name = "tymtLauncher"
version = "2.2.2"
description = "tymtLauncher"
authors = ["solar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [
    "macos-private-api",
    "tray-icon",
    "unstable"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
zip = "=2.6.1"
# zip-extensions = "=0.8.1"
tar = "0.4.44"
flate2 = "1.1.1"
machineid-rs = "1.2.4"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3.31"
actix-web = "4.10.2"
actix-cors = "0.7.1"
dotenv = "0.15"
winapi = "0.3.9"
tauri-plugin-fs = "2.2.1"
tauri-plugin-cli = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-http = "2.4.3"
tauri-plugin-updater = "2.7.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-notification = "2.2.2"
tauri-plugin-shell = "2.2.1"
window-vibrancy = "0.6.0"
window-shadows = "0.2.2"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_UI", "Win32_UI_WindowsAndMessaging"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
